flink-container/kubernetes/jobmanager-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jobmanager-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
    #prometheus.io/scrape: "true"
    #prometheus.io/path: /metrics
    #prometheus.io/port: "80"
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: flink-job-cluster
              servicePort: 8081
